--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,61 +1,164 @@
-.home-container {
-    padding: 20px;
-    /* Adiciona espaçamento ao redor do conteúdo */
-    background-color: #f4f4f4;
-    /* Cor de fundo da página inicial */
-    color: #333;
-    /* Cor do texto */
+#hero {
+    background: var(--light-gray);
+    border-top: 0.125rem solid #e4e4e4;
+    min-height: 90vh;
+    width: 100%;
+    display: flex;
+    padding-bottom: 0;
+    border: none;
+    box-sizing: border-box;
+    scroll-margin-top: 80px;
 }
 
-.home-container h1,
-.home-container h2 {
-    color: #222;
+#highlights,
+#testimonials,
+#find-us {
+    background: var(--light-gray);
+    border-top: 0.125rem solid #e4e4e4;
+    min-height: 90vh;
+    width: 100%;
+    display: flex;
+    padding-bottom: 0;
+    border: none;
+    box-sizing: border-box;
+    scroll-margin-top: 80px;
 }
 
-.home-container p {
+#hero>img,
+#highlights>img,
+#testimonials>img,
+#find-us>img {
+    position: absolute;
+    right: 0;
+    height: 60%;
+    padding-left: 30%;
+}
+
+#hero p,
+#highlights p,
+#testimonials p,
+#find-us p {
+    color: var(--second-text-color);
     margin: 10px 0;
-    /* Margem superior e inferior para parágrafos */
 }
 
-.highlights {
+#hero .content,
+#highlights .content,
+#testimonials .content,
+#find-us .content {
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    text-align: center;
+    gap: 1.75rem;
+}
+
+#hero .content>div,
+#highlights .content>div,
+#testimonials .content>div,
+#find-us .content>div {
+    width: fit-content;
+    align-self: center;
+    margin-bottom: 1%;
+}
+
+#hero .content p,
+#highlights .content p,
+#testimonials .content p,
+#find-us .content p {
+    width: 80%;
+    align-self: center;
+}
+
+.highlight-item .author h3,
+.author p {
+    display: inline;
+    margin-right: 10px;
+    padding-bottom: 10px;
+}
+
+.content {
+    gap: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.content>div :first-child {
+    width: 10.625rem;
+}
+
+.content p {
+    width: 80%;
+    align-self: center;
+}
+
+.content p:first-of-type {
+    color: var(--primary-color);
+    font-weight: var(--fw-bold);
+}
+
+.highlights-cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 30px;
 }
 
 .highlight-item {
-    flex: 1 1 300px;
-    /* Flexível com tamanho base de 300px */
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 200px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
     background-color: #fff;
-    /* Cor de fundo dos destaques */
     border-radius: 8px;
-    /* Bordas arredondadas */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Sombra leve */
+    box-shadow: 0 8px 12px rgba(0, 147, 76, 0.2);
+    box-sizing: border-box;
 }
 
-.image-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    /* Espaço entre as imagens */
-    margin: 20px 0;
-    /* Margem superior e inferior */
-    justify-content: center;
+.highlight-item h3,
+.highlight-item p {
+    margin: 0.5rem 0;
+    width: 100%;
+    word-break: normal;
+}
+
+.highlight-item h3 {
+    font-size: 1.5rem;
+}
+
+.highlight-item p {
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: bolder;
+    word-break: break-word;
 }
 
 .gallery-image {
     max-width: 800px;
-    /* Largura máxima */
     max-height: 400px;
-    /* Altura máxima */
     width: 100%;
-    /* Ajusta a largura para o contêiner pai */
     height: auto;
-    /* Mantém a proporção da imagem */
     border-radius: 8px;
-    /* Bordas arredondadas para as imagens */
     object-fit: cover;
-    /* Garante que a imagem cubra o contêiner */
+}
+
+.icon-container {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.icon {
+    max-width: 40px;
+    max-height: 40px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+    cursor: pointer;
 }
